--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
             - '80:80'
         environment:
             - NODE_ENV=production
+            - PORT=80
         healthcheck:
-            test: ['CMD', 'wget', '-q', '--spider', 'http://localhost']
+            test: ['CMD', 'wget', '-q', '--spider', 'http://localhost:80']
             interval: 30s
             timeout: 10s
             retries: 3
